Fixed bottom right background shape not expanding to bottom of page on mobile layout

--- a/scss/globals/_background.scss
+++ b/scss/globals/_background.scss
@@ -3,15 +3,20 @@
 
 .background {
     display: grid;
+    grid-area: 1 / 1 / 2 / 2;
+
+    width: 100%;
 
     overflow: hidden;
+
+    z-index: -999;
 
     &__shape {
         background-image: colors.$purple-gradient;
     
         max-width: var.$background-max;
         min-width: var.$background-max;
-        height: 50vh;
+        height: 100%;
     
         &--purple {
             grid-area: 1 / 1 / 2 / 2;
