--- a/scss/globals/_boilerplate.scss
+++ b/scss/globals/_boilerplate.scss
@@ -6,16 +6,20 @@
     font-family: fonts.$font-fam;
     font-size: fonts.$body-medium;
     font-weight: fonts.$regular;
+
+    height: 100%;
 }
 
 body {
     margin: 0;
     background-color: colors.$off-white;
+
+    height: 100%;
 }
 
 main {
-    @media screen and (min-width: 700px) {
-        display: grid;
-        justify-items: center;
-    }
+    display: grid;
+    justify-items: center;
+
+    height: 100%;
 }
