--- a/style.css
+++ b/style.css
@@ -2,18 +2,19 @@
   font-family: "Rubik", sans-serif;
   font-size: 1rem;
   font-weight: 400;
+  height: 100%;
 }
 
 body {
   margin: 0;
   background-color: #FAFAFA;
+  height: 100%;
 }
 
-@media screen and (min-width: 700px) {
-  main {
-    display: grid;
-    justify-items: center;
-  }
+main {
+  display: grid;
+  justify-items: center;
+  height: 100%;
 }
 
 :root {
@@ -29,13 +30,16 @@ body {
 
 .background {
   display: grid;
+  grid-area: 1/1/2/2;
+  width: 100%;
   overflow: hidden;
+  z-index: -999;
 }
 .background__shape {
   background-image: linear-gradient(225deg, #E844FF 0%, #8739FF 100%);
   max-width: 31.875rem;
   min-width: 31.875rem;
-  height: 50vh;
+  height: 100%;
 }
 .background__shape--purple {
   grid-area: 1/1/2/2;
@@ -71,10 +75,11 @@ body {
 
 .grid {
   display: grid;
-  grid-template: repeat(2, auto)/1fr;
+  grid-template: repeat(2, -webkit-max-content)/1fr;
+  grid-template: repeat(2, max-content)/1fr;
+  grid-area: 1/1/2/2;
   justify-items: center;
-  position: absolute;
-  top: 0px;
+  height: unset;
   margin: 3rem 2rem;
 }
 @media screen and (min-width: 700px) {
